fix: make these more visible on ey

--- a/app/stylus/layout.styl
+++ b/app/stylus/layout.styl
@@ -753,7 +753,7 @@ body.collapsed
         transform rotate(180deg)
         border none
         background-color theme_color
-        height 48px
+        height 50px
         width 28px
         border-radius 4px
         top 34px
@@ -765,7 +765,7 @@ body.collapsed
         font-weight bold
         font-size 1.1em
         if dark(theme_color)
-          color lighten(dark_theme_color, 20%)
+          color #fff
         else
           color darken(dark_theme_color, 20%)
         border none
